--- a/guu.css
+++ b/guu.css
@@ -46,4 +46,9 @@
   50%
     {transform: translateX(-40px);}
 }
+.main-content{
+    width: 100%;
+    height: 100vh;
+    background: url("https://source.unsplash.com/random/4000x4000") center no-repeat;
+    background-size: cover;
 }
