--- a/guu.css
+++ b/guu.css
@@ -6,7 +6,7 @@
   width: 142px;
   height: 40px;
   margin: -20px 0 0 -71px;
-  background: white;
+  background: transparent;
   filter: contrast(20);
 }
   .dot{
@@ -15,7 +15,7 @@
     height: 16px;
     top: 12px;
     left: 15px;
-    filter: blur(4px);
+    filter: blur(0px);
     background: green;
     border-radius: 50%;
     transform: translateX(0);
@@ -34,7 +34,7 @@
       width: 16px;
       height: 16px;
       margin-left: 16px;
-      filter: blur(4px);
+      filter: blur(0px);
       background: #000;
       border-radius: 50%;
     }
