--- a/guu.css
+++ b/guu.css
@@ -46,9 +46,8 @@
   50%
     {transform: translateX(-40px);}
 }
-.main-content{
+.container{
     width: 100%;
     height: 100vh;
-    background: url("https://source.unsplash.com/random/4000x4000") center no-repeat;
     background-size: cover;
 }
