--- a/styles.css
+++ b/styles.css
@@ -100,11 +100,11 @@ html{
 }
 
 .nav-link:hover i.fa-behance-square{
-	color: #dd4b39;
+	color: #1769ff;
 }
 
 .nav-link:hover i.fa-github-square{
-	color: #ea4c89;
+	color: #333;
 }
 
 .nav-link:hover i.fa-linkedin-in{
