--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ html{
 	font-family: 'Roboto', sans-serif;
 }
 
-.container{
+.container2{
 	width: 100%;
 	height: 100vh;
-	background: url(https://images.unsplash.com/photo-1484387436194-cf7cb70800ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+	background: url(https://images.unsplash.com/photo-1516528387618-afa90b13e000?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
 	background-size: cover;
 	display: flex;
 	align-items: center;
@@ -100,11 +100,11 @@ html{
 }
 
 .nav-link:hover i.fa-behance-square{
-	color: #1769ff;
+	color: #dd4b39;
 }
 
 .nav-link:hover i.fa-github-square{
-	color: #333;
+	color: #ea4c89;
 }
 
 .nav-link:hover i.fa-linkedin-in{
