--- a/hur.css
+++ b/hur.css
@@ -20,7 +20,7 @@ header{
     z-index: 1000;
 }
 
-.container{
+.containerx{
     width: 100%;
     max-width: 120rem;
     margin: 0 auto;
@@ -164,9 +164,10 @@ header{
 .demo-content{
     width: 100%;
     height:100vh;
-    background: url("qt.png") center no-repeat;
+    background: url("qt2.png") center no-repeat;
     background-size: cover;
     position: relative;
+    background-color: rgba(0,0,0, 0.9);
 }
 .demo-content::after{
     content: '';
@@ -180,7 +181,7 @@ header{
 .demo-content2{
     width: 100%;
     height:120vh;
-    background: url("gf1.png") center no-repeat;
+    background: url("gf2.png") center no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -196,7 +197,7 @@ header{
 .demo-content3{
     width: 100%;
     height:108vh;
-    background: url("got.png") center no-repeat;
+    background: url("got2.png") center no-repeat;
     background-size: contain;
     position: relative;
 }
@@ -271,6 +272,8 @@ label{
     .nav1-link{
         margin: 10px;
         border-radius: 25px;
+        opacity: 0;
+        display: none;
     }
 
     .hero{
@@ -279,22 +282,24 @@ label{
     }
 
     .demo-content{
-    height: 30vh;
-    background-size: contain;
+    height: 60vh;
+    background-size: cover;
 
     }
 
     .demo-content2{
-    height: 30vh;
-    background-size: contain;
+    height: 60vh;
+    background-size: cover;
 
     }
     .demo-content3{
-    height: 29vh;
-    background-size: contain;
+    height: 60vh;
+    background-size: cover;
 
     }
-    
+    .containerz{
+        margin-bottom: -10rem;
+    }
     .scrolling-active .hero{
         display: block;
     }
@@ -305,4 +310,5 @@ label{
         opacity: 100%;
         display: block;
     }
+
 }
